--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "uni-preset-vue",
-  "version": "0.0.0",
+  "name": "barrage",
+  "version": "0.0.1",
   "scripts": {
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
@@ -56,13 +56,15 @@
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@dcloudio/types": "^3.3.2",
     "@dcloudio/uni-automator": "3.0.0-3081220230817001",
     "@dcloudio/uni-cli-shared": "3.0.0-3081220230817001",
     "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
-    "@vue/tsconfig": "^0.1.3",
     "@vue/runtime-core": "^3.2.45",
+    "@vue/tsconfig": "^0.1.3",
     "typescript": "^4.9.4",
     "vite": "4.1.4",
     "vue-tsc": "^1.0.24"
