--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "barrage",
   "version": "0.0.1",
   "scripts": {
+    "prepare": "husky install",
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
     "dev:app-ios": "uni -p app-ios",
@@ -63,9 +64,17 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3081220230817001",
     "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vue/runtime-core": "^3.2.45",
     "@vue/tsconfig": "^0.1.3",
-    "typescript": "^4.9.4",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.19.2",
+    "husky": "^8.0.3",
+    "typescript": "*",
     "vite": "4.1.4",
     "vue-tsc": "^1.0.24"
   }
