--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "prepare": "husky install",
+    "lint-staged": "lint-staged",
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
     "dev:app-ios": "uni -p app-ios",
@@ -74,8 +75,13 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.19.2",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "typescript": "*",
     "vite": "4.1.4",
     "vue-tsc": "^1.0.24"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,vue}": "eslint --fix --ignore-path .eslintignore",
+    "src/**/*.{less,sass,css,vue}": "stylelint --fix --ignore-path .eslintignore"
   }
 }
