--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3081220230817001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
+    "vant": "^4.8.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
@@ -76,6 +77,8 @@
     "eslint-plugin-vue": "^9.19.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "stylelint": "^16.0.1",
+    "stylelint-config-standard": "^35.0.0",
     "typescript": "*",
     "vite": "4.1.4",
     "vue-tsc": "^1.0.24"
